Placate exception check validation in operationArrayIndexOfString(). https://bugs.webkit.org/show_bug.cgi?id=196067 <rdar://problem/49056572>

Reviewed by Michael Saboff.

JSTests:

* stress/string-equal-exception-check.js: Added.

Source/JavaScriptCore:

* dfg/DFGOperations.cpp:


Canonical link: https://commits.webkit.org/210358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243294 268f45cc-cd09-0410-ab3c-d52691b4dbfc